# lvgl_sampe_demo

./: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/: ui_comp.c  ui_comp.h  ui_comp_header.c  ui_comp_header.h  ui_comp_hidewipe.c  ui_comp_hidewipe.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_labelsw.c  ui_comp_labelsw.h
images/: ui_img_1382514998.c  ui_img_657858778.c
screens/: ui_Item.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
